@@ -2,7 +2,6 @@ package piscine.m4;
 
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * Exercice 4.3.1 — Filtrage et projection (solution de reference).
@@ -17,7 +16,7 @@ public class Effectifs {
         return membres.stream()
                 .filter(s -> s.niveau().compareTo(min) >= 0)
                 .map(Membre::nom)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -26,6 +25,6 @@ public class Effectifs {
     public static List<Membre> filtrer(List<Membre> membres, Predicate<Membre> critere) {
         return membres.stream()
                 .filter(critere)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
